# GTTool

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  build.ymll
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  memory_scanner.cpp  memory_scanner.h  native-lib.cpp  process_utils.cpp  process_utils.h
app/src/main/kotlin/com/arman/dev/gttool/: GTApplication.kt  MainActivity.kt
app/src/main/kotlin/com/arman/dev/gttool/data/model/: GameInfo.kt  MemoryRegion.kt  ScanMode.kt  ScanResult.kt  ScanType.kt  ValueType.kt
app/src/main/kotlin/com/arman/dev/gttool/data/repository/: GameRepository.kt  MemoryRepository.kt
app/src/main/kotlin/com/arman/dev/gttool/domain/usecase/: GetInstalledGamesUseCase.kt  ModifyMemoryUseCase.kt  MonitorMemoryUseCase.kt  ScanMemoryUseCase.kt
app/src/main/kotlin/com/arman/dev/gttool/presentation/components/: AddressItem.kt  GameCard.kt  LoadingIndicator.kt  PermissionDialog.kt  SearchBar.kt  ValueTypeSelector.kt
app/src/main/kotlin/com/arman/dev/gttool/service/: IShizukuService.aidl  MemoryMonitorService.kt  OverlayService.kt
app/src/main/kotlin/com/arman/dev/gttool/util/: Extensions.kt  FileHelper.kt  KotlinMemoryScanner.kt  NativeLib.kt  PermissionHelper.kt  ProcessHelper.kt  ShizukuHelper.kt
app/src/main/res/drawable/: ic_freeze.xml  ic_launcher_background.xml  ic_scan.xml  ic_settings.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values/night/: colors.xml  themes.xml
(+16 files in other folders)
